tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_63.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := ((- (+ x)) > 0);
               z := y;
               q := ((((- z) < (2 MOD 200)) & ((p OR p) & p)) & q);
               z := (- x);
               q := q;
  (* error *)  y := y;
               z := (+ 0);
               p := q;
               x := 200;
               p := (0 # 0)
END Test16.